<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    The choice of constraint layer will purely a personal one due to its modern features-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/headingTextStyle"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/instruction_head"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/big_gap_margin" />

        <TextView
            android:id="@+id/textView2"
            style="@style/headingTwoTextStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/gap_margin"
            android:lineSpacingMultiplier="3"
            android:text="@string/instructions"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button_start_viewing"
            style="@style/mainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_start_viewing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.715" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>